# helloCpp

./: .gitignore  CMakeLists.txt  README.md  greet.cpp  helloWorld.cpp  main.cpp
.github/: dependabot.yml
.github/workflows/: cmake.yml
greeter/: CMakeLists.txt  greet.cpp
greeter/include/: greet.h
tests/: CMakeLists.txt  test_greeter.cpp
